@@ -29,7 +29,7 @@
   9de97172522316bb359227b484cfc9bc4c5b6c5a 2011060500 mingw32-base.xml
   fa31e0d9c348863330a84cb6b976d493b7734209 2011101100 mingw32-basic-bsdtar.xml
   b7931fcdbfc7cb63c21ff97c1ebe195de6bbb2b7 2011101100 mingw32-binutils.xml
-  298c9e3add0d321eeae958f3d98195321d6f634f 2011101100 mingw32-bzip2.xml
+  2d70daa65cfe81eb71ac6817358b1cb284d6a68f 2011101400 mingw32-bzip2.xml
   9a70ba2be6c8a8e39d0d58b458592dfba348230f 2011101100 mingw32-cygutils.xml
   dac44763209525b04cbaab271524991a9db920d0 2011101100 mingw32-expat.xml
   3df1f38d5924070bb1a51e32fb4e8f9ffd895690 2011101100 mingw32-gcc-tools.xml
@@ -54,7 +54,7 @@
   2dc9b22e0a53267bd4f764100b4d01b740f3aa87 2011101100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
   488d6d4e037b19acdffc6a54c753fa69c21e80f9 2011082300 mingw32-runtime.xml
-  505849393a81b4568c112cb197ae3175309e79e1 2011101100 mingw32-xz.xml
-  166a77265c5e62fde4c7c1d112027388425eb419 2011101100 mingw32-zlib.xml
+  a8d4de8b2feefdf9744cff733051e395f72e7b21 2011101400 mingw32-xz.xml
+  751a1de122b6aac73f7e32c0404d123e43a9cf19 2011101400 mingw32-zlib.xml
 #
 # $RCSfile$: end of file
