@@ -1,3 +1,12 @@
+2011-10-14  Charles Wilson  <mingw@cwilson.fastmail.fm>
+
+	Update & publish mingw32-zlib, mingw32-bzip2, mingw32-xz.
+
+	* mingw32/mingw32-zlib.xml: Update to zlib-1.2.5-4.
+	* mingw32/mingw32-bzip2.xml: Update to bzip2-1.0.6-4.
+	* mingw32/mingw32-xz.xml: Update to xz-5.0.3-2.
+	* mingw32/issue.log: Update accordingly.
+
 2011-10-11  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Make "source" and "licence" tarname resolution deterministic.
